--- a/about page/about.html
+++ b/about page/about.html
@@ -65,7 +65,7 @@
 
     <p class="para-below">Thank you for choosing Tourist Website as your travel companion. We hope you have an
         incredible journey!</p>
-    <footer class="footer">
+<!--     <footer class="footer">
         <div class="footer-head">
             <div class="footer-logo">Go Trip
                 <div class="f-under-logo">Explore your destination</div>
@@ -109,7 +109,7 @@
         </div>
         <div class="copy">&copy; Go Trip 2026 | All rights are reserved
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
